--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./server.js",
-    "dev": "nodemon ./server.js"
+    "dev": "nodemon ./server.js",
+    "dataStore": "node ./models/data/storesData.js",
+    "dataProduct": "node ./models/data/productsData.js",
+    "dataEmployee": "node ./models/data/employeesData.js"
+    
   },
   "repository": {
     "type": "git",
