--- a/package.json
+++ b/package.json
@@ -7,10 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./server.js",
-    "dev": "nodemon ./server.js",
-    "dataStore": "node ./models/data/storesData.js",
-    "dataProduct": "node ./models/data/productsData.js",
-    "dataEmployee": "node ./models/data/employeesData.js"
+    "dev": "nodemon ./server.js"
     
   },
   "repository": {
@@ -25,8 +22,10 @@
   },
   "homepage": "https://github.com/Riccamach29/TallerBack#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.12.1"
+    "mongoose": "^8.12.1",
+    "morgan": "^1.10.0"
   }
 }
